(executable
 (name fuzz)
 (modules fuzz)
 (libraries fmt crowbar optint))

(rule
 (alias runtest)
 (deps
  (:fuzz fuzz.exe))
 (action
  (run %{fuzz})))

(executable
 (name fuzz_int63)
 (modules fuzz_int63)
 (libraries monolith optint))

(rule
 (alias monolith)
 (deps
  (:fuzz fuzz_int63.exe))
 (action
  (run %{fuzz})))
