(rule
 (targets optint.ml optint.mli)
 (deps    (:select select/select.ml)
          int_x64_backend.ml int_x86_backend.ml
          int_x64_backend.mli int_x86_backend.mli)
 (action  (run %{ocaml} %{select}
            --x64 %{arch_sixtyfour} -o optint)))

(library
 (name optint)
 (modules optint)
 (public_name optint))

(library
 (name optint_x64)
 (modules int_x64_backend)
 (public_name optint.x64))

(library
 (name optint_x86)
 (modules int_x86_backend)
 (public_name optint.x86))
